Make small fixes to broken videos and combo explanations

--- a/antiairs.html
+++ b/antiairs.html
@@ -47,9 +47,7 @@
 		</video>
 		<p>Cool mid-combo 66H that gives great corner carry. You can skip the 66H entirely if you aren't comfortable with it.</p>
 		
-		<h1>Bonus Antiairs</h1>
-		
-		<h1>Corner Antiairs></h1>
+		<h1>Corner Antiairs</h1>
 		<h2>Corner Antiair</h2>
 		<code>2H (counterhit) > 236H~4 > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -58,7 +56,7 @@
 		<p>Putting 214H as your first special after tornado sometimes bounces the opponent out of the corner, so I recommend using 623H if your cooldowns allow it. Ender is your choice. End in 5H > 22H to set up seals. End in 22U for a safejump setup. End in super to close the round. End in install to BM. The possibilities are endless.</p>
 		
 		<h2>Corner Antiair But Better</h2>
-		<code>2H (counterhit) > 236H~4 > 66H > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
+		<code>2H (counterhit) > 236H~4 > (backwalk)66H > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-antiair-better.mp4"/>
 		</video>
