--- a/corner-safejumps.html
+++ b/corner-safejumps.html
@@ -39,14 +39,14 @@
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
 		
 		<h2>Old Meterless Safejump</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.M > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/old-route-1.mp4"/>
 		</video>
 		<p>This was the popular route on the release version of the game. It's pretty difficult, but it's another meterless safejump from a common starter, and the weird jump arc of the 5U leaves a little more room for ambiguity than regular safejumps.</p>
 		
 		<h2>Metered Safejump (rejump j.22U)</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.22U (> land > 5L whiff > jump > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.22U (> land > 5L whiff > jump > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/rejump-22u-1.mp4"/>
 		</video>
@@ -65,7 +65,7 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-new-1.mp4"/>
 		</video>
 		<p>The j.22H > j.2U link is awkward and takes getting used to. It will show up in several of these bonus routes, so it's good to learn. This combo does a bit more damage than the meterless combos listed in the main section of the page, but it uses up an additional seal so the trade is questionable. Again, the main appeal of these bonus routes is just "doing a different combo."</p>
-		<p>Note the starter. Unlike routes that place 214H as your first special, 623H routes require you to already be hugging them in the corner, so you're less likely to get this hit in a match. It works out of a couple situations other than autocombo, e.g. 2L f.L 623H, but for simplicity I'm just going to list combos like these as autocombo starters.</p>
+		<p>Note the starter. Unlike routes that place 214H as your first special, 623H routes require you to already be hugging them in the corner, so you're less likely to get this hit in a match. It works out of a couple situations other than autocombo, e.g. (2L > f.L > 623H), but for simplicity I'm just going to list combos like these as autocombo starters.</p>
 		
 		<h2>Metered j.214H Safejump</h2>
 		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 22U > 2H (> 5U > j.H safejump)</code><br class="combo"/>
@@ -100,7 +100,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/grounded-tornado.mp4"/>
 		</video>
-		<p>You need to be close to the opponent. Premium damage for a meterless route, even beating out most metered variants. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
+		<p>You need to be close to the opponent. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
 		
 		<h2>66H Safejump</h2>
 		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U (> 5L whiff > j.H safejump)</code><br class="combo"/>
@@ -119,7 +119,7 @@
 		<h2>Air Seal 66H Safejump</h2>
 		<code>(starter) > 623M > j.1U > 5H > 236H~8 > 66H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy-alt.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-top-seal.mp4"/>
 		</video>
 		<p>Requires an air seal already set and you need to be close to the opponent. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool.</p>
 	</body>
