--- a/empty-lows.html
+++ b/empty-lows.html
@@ -31,7 +31,7 @@
 		<h2>Metered Empty Low (delay 22U) (+4)</h2>
 		<code>(starter) > 214H > 5L > 5H > 623H > j.H > (delay)22U (> 2L whiff > empty jump > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-delay-22u-2mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-delay-22u-2.mp4"/>
 		</video>
 		<p>+4 at best, but the more you delay the 22U the less frame advantage you'll have. Even you won't know what your frame advantage is mid-match, so it becomes very risky for the enemy to mash, letting you get away with more ambiguous setups than usual.</p>
 		
@@ -64,11 +64,11 @@
 		<p>The more you delay the 8U, the less obvious it looks. Delay it enough and it becomes a safejump again (as noted on the other page).</p>
 		
 		<h2>Metered Skyhigh Empty Low (+2)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.38U > j.68U > j.22U (> j.28U whiff > 2L)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.38U > j.68U > j.22U (> j.68U whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-skyhigh-2.mp4"/>
 		</video>
-		<p>Extremely funny convoluted empty low setup that sadly always leaves you +2 at best. You can end in j.29U whiff to be +7 at best; delay the j.29U to make the frame data more ambiguous.</p>
+		<p>Extremely funny convoluted empty low setup that sadly always leaves you +2 at best. You can end in j.69U whiff to be +7 at best; delay the j.69U to make the frame data more ambiguous.</p>
 		
 		<h2>Zipper Empty Low (+4)</h2>
 		<code>autocombo > 623H > j.H > rejump j.H > j.214H > j.22H > j.2U > 8U > j.H > 2H (> 8U whiff > 2L)</code><br class="combo"/>
