--- a/install.html
+++ b/install.html
@@ -9,7 +9,6 @@
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Install Tech</h1>
-		<h2>Foreword</h2>
 		<p>Grimnir's install is broadly considered meme-tier, but believe it or not, it DOES give several serious and unironic advantages that can warrant pressing, especially in matchups where U skills aren't as necessary.</p>
 		<p>It opens up the ability to throw bait from anywhere, safely buffer full combos behind your lights, and move around in ways that are harder to predict. You can threaten airdash counterpoke from any position, and you can convert any hit into a corner safejump.</p>
 		<p>Install can be particularly worth pressing when the enemy is one hit from death, but super won't be enough to kill; or, when you get reset to neutral and one more confirm will win.</p>
@@ -90,7 +89,7 @@
 		<p>Funny variant on the previous setup. Your opponent probably doesn't know the combo limit for install combos, so you have good odds on catching them sleeping with this dastardly install-exclusive empty low.</p>
 		
 		<h2>Install Midscreen Crossup</h2>
-		<code>(starter) > 623M > j.3U > 2H > 236H~4 > 5M > 623L (> 6U whiff)</code><br class="combo"/>
+		<code>(starter) > 623M > j.3U > 2H > 236H~4 > (delay)5M > 623L (> 6U whiff)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-crossup.mp4"/>
 		</video>
