--- a/midscreen.html
+++ b/midscreen.html
@@ -12,14 +12,14 @@
 		<h2>Meterless Midscreen</h2>
 		<code>(starter) > 214L</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-meterless.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-midscreen.mp4"/>
 		</video>
 		<p>Grimnir's meterless midscreen conversions are pretty average. Off very distant hits (including most whiff punishes) you can't even connect 214L. If your starter is autocombo, you can end on 214M instead for greater corner carry.</p>
 		
 		<h2>Simple Midscreen</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/basic-midscreen.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/simple-midscreen.mp4"/>
 		</video>
 		<p>Your easiest (actual) midscreen combo. If you're dropping the 2M after 623M it's probably because you're doing either the 214U or the 2H too late. You want all inputs as early as possible.</p>
 		<p>If you reach the corner for wallbounce you gain a lot of flexibility with the ender. The one shown in the video is 5L > 22H, which leaves you +1 in their face. Note that any button you press here will lose to wakeup throw. Set up single seal instead if you want to safely take pressure with a button.</p>
@@ -79,7 +79,7 @@
 		</video>
 		<p>A similar concept with 623M. Less damage than the 623L route but keeps your tornado cooldown. Generally you don't get the choice of which route you use because it depends where your seals are, but on the rare occasions you do get to choose, that's your tradeoff.</p>
 		
-		<h2>623M (reaches corner)</h2>
+		<h2>623M (no corner)</h2>
 		<code>(starter) > 623M > j.3U > 5H > 236H~8 > 214U > 2H > 623H > 22X</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623m-no-corner.mp4"/>
