--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Grimnir Combos</h1>
 		<a href="https://grimnir-combos.github.io/recommended.html">RECOMMENDED COMBOS FOR NEW GRIM PLAYERS</a><br/>
-		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Combos</a><br/>
+		<a href="https://grimnir-combos.github.io/corner-safejumps.html">Corner Safejumps</a><br/>
 		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a><br/>
 		<a href="https://grimnir-combos.github.io/tornado-setups.html">Tornado Setups</a><br/>
 		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Combos</a><br/>
