--- a/u-skill-starters.html
+++ b/u-skill-starters.html
@@ -18,7 +18,7 @@
 		<p>If you're close enough to the corner, you can convert your 214U starter into a meterless safejump setup. Getting a full combo off a hitscan fullscreen bullshit U skill also does bonus mental damage to the opponent.</p>
 		<p>This is also your whiff punish combo; Grimnir frequently can't connect any other specials off of a whiff punish, so if you want a conversion you have to spend the 50 to cancel into 214U.</p>
 		<p>Has much better corner carry than you think it does. The 214H will wallbounce if you start the combo from anywhere about halfscreen or closer.</p>
-		<p>Note that for 214U > 5M > tornado combos, you must hit the 214U from about 75% of the screen or closer. If the opponent is fullscreen, you get a different wallbounce that causes the combo to drop. It's easiest to convert this hit with f.M > raging strike.</p>
+		<p>Note that for (214U > 5M > tornado) combos, you must hit the 214U from about 75% of the screen or closer. If the opponent is fullscreen, you get a different wallbounce that causes the combo to drop. It's easiest to convert this hit with f.M > raging strike.</p>
 		
 		<h2>214U starter (no corner)</h2>
 		<code>214U > (delay)5M > 236H~4 > run forward > 5HH > 623H > 22X</code><br class="combo"/>
@@ -27,14 +27,14 @@
 		</video>
 		<p>Conservation route if you won't reach corner but can't (or don't want to) spend another 25 to extend the combo further. Getting 5HH is actually pretty difficult - it's easy to screw up the timings and get f.H instead. In that case just fall back to the previous combo, and either set up seals directly after the f.H or take regular oki after the 214X.</p>
 		
-		<h2>214U starter (extra carry)<h2>
+		<h2>214U starter (extra carry)</h2>
 		<code>214U > (delay)5M > 236H~6 > 214U > 2H > 623H > 22X</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-extra-carry.mp4"/>
 		</video>
 		<p>If you have the extra 50 to spend you will probably prefer this route over the previous one. Sets up seals and carries the opponent all the way to the corner from anywhere on screen.</p>
 		
-		<h2>214U antiair<h2>
+		<h2>214U antiair</h2>
 		<code>214U > 2M > raging strike > raging chain > 5HHH > 214H > 22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-antiair.mp4"/>
@@ -65,9 +65,9 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-old.mp4"/>
 		</video>
-		<p>Alternate version of the first 214U combo listed on this page that you can use if you're close enough to the corner. It has less corner carry than the other combo, so there isn't really a reason to use it anymore, but it looks very cool.</p>
+		<p>Alternate version of the first 214U combo listed on this page that you can use if you're close enough to the corner. It has less corner carry and does less damage than the other combo, so there isn't really a reason to use it anymore, but it looks very cool.</p>
 		
-		<h2>Old 214U midscreen</h2>
+		<h2>Midscreen tornado overhead reset</h2>
 		<code>(starter) > 214U > 22U > 5H > 623L > 9U > (delay)j.3U > 2H (> 236H~8 whiff > 66M)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-tornado-overhead.mp4"/>
