Make small fixes to combo explanations and matchup notes

--- a/corner-safejumps.html
+++ b/corner-safejumps.html
@@ -39,7 +39,7 @@
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
 		
 		<h2>Old Meterless Safejump</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 236H~8 > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/old-route-1.mp4"/>
 		</video>
@@ -82,11 +82,11 @@
 		<p>Funny highjump safejump. Unfortunately a little more difficult than it looks. You need to manually delay the second 8U or you'll land before your opponent and whiff the j.H.</p>
 		
 		<h2>Metered Skyhigh Safejump</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.38U > j.68U > j.22U (> j.248U whiff > j.H safejump)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.38U > j.68U > j.22U (> j.268U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-skyhigh-1.mp4"/>
 		</video>
-		<p>Funny highjump safejump, metered edition. The convoluted dash pattern does bonus mental damage to your opponent (and your seal count). This one is actually easier than it looks. Let go of the button after the j.38U, and the j.68U will time itself. The j.248U isn't quite autotimed, but the timing is pretty lenient.</p>
+		<p>Funny highjump safejump, metered edition. The convoluted dash pattern does bonus mental damage to your opponent (and your seal count). This one is actually easier than it looks. Let go of the button after the j.38U, and the j.68U will time itself. The j.268U isn't quite autotimed, but the timing is pretty lenient.</p>
 		
 		<h2>Zipper Safejump</h2>
 		<code>autocombo > 623H > j.H > rejump j.H > j.214H > j.22H > j.2U > 8U > j.H > 2H (> delay 5U > j.H safejump)</code><br class="combo"/>
