--- a/empty-lows.html
+++ b/empty-lows.html
@@ -36,7 +36,7 @@
 		<p>+4 at best, but the more you delay the 22U the less frame advantage you'll have. Even you won't know what your frame advantage is mid-match, so it becomes very risky for the enemy to mash, letting you get away with more ambiguous setups than usual.</p>
 		
 		<h2>Old Meterless Empty Low (+1)</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 9U whiff > 2L)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 236H~8 > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 9U whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/old-route-2.mp4"/>
 		</video>
