--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 		<p>For tornado specifically you'll see "236H~X". This is to denote the tornado followup. 236H~8 is up tornado. 236H~4 is stop tornado.</p>
 		<p>You'll also see "rejump" in some combos. This means to land, jump again, and do the input. Another thing most characters in this game don't get to do, but you're playing a cool character so you get to do the cool stuff.</p>
 		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You might see it in old gameplay videos, but fuzzies as a concept were entirely removed in version 2.10 and you can no longer perform them.</p>
-		<p>The Street Fighter 6-style frame meter at the bottom of each video is a mod: https://github.com/agersant/gbvsr-frame-meter Not necessary but can help you figure out what you're doing wrong.</p>
+		<p>The Street Fighter 6-style frame meter at the bottom of each video is a mod: <a href="https://github.com/agersant/gbvsr-frame-meter">https://github.com/agersant/gbvsr-frame-meter</a> Not necessary but can help you figure out what you're doing wrong.</p>
 	</body>
 </html>
