--- a/matchup-notes.html
+++ b/matchup-notes.html
@@ -102,8 +102,8 @@
 		<p>Her charge is an annoying move to deal with. She can't be plus off it, but her buttons are so much better that when spaced she can often stuff an attempt to challenge. When you're near the corner, randomly throwing out H charge is a safe play that can easily lead to a full combo.</p>
 		<p>Katalinas will randomly throw out Shield Wall on offense to try and bait BC. If you press BC, you die. If you don't, she broadly has three followups she'll do:</p>
 		<p>1) Slash, then backstep. She's minus but far enough away that it can be tough to challenge, especially on reaction.</p>
-		<p>2) Slash, then forward step. She is always -5 and can be punished with either 5L or throw, but it can be a difficult reaction.</p>
-		<p>3) No slash and backstep. This is extremely punishable, but difficult to react to.</p>
+		<p>2) Slash, then forward step. She is -5 at best and -1 at worst depending how long she charges. Note that -1 means her throw will beat an attempt to mash 5L, so you have to play the throw RPS.</p>
+		<p>3) No slash and backstep. This is extremely punishable, but not on reaction.</p>
 		<p>You can sometimes mash to beat her before she has time to do any followup. In particular, Shield Wall only has one point of armor, so f.H's two hits, U tornado's multihit, or just mashing 5L autocombo can all win against delayed followups. If she does it in a blockstring, the slash will generally come out first and beat you, so beware.</p>
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Punished by 9f DP.</p>
@@ -156,7 +156,7 @@
 			<h2>Ladiva</h2>
 			<img src="https://grimnir-combos.github.io/charicons/ladiva.jpg"/>
 		</div>
-		<p>On roundstart, walk back. If she runs forward or does lariat, be ready to duck and check it. Otherwise set up EX tornado and EX seals.</p>
+		<p>On round start, walk back. If she runs forward or does lariat, be ready to duck and check it. Otherwise set up EX tornado and EX seals.</p>
 		<p>Lariat is very fast in neutral but punishable if you crouch, so be wary of standing around too much.</p>
 		<p>Ladivas enjoy jumping on top of our seals and mashing the bellyflop. It is difficult to antiair with Grimnir's 2H and 623M, but a well-timed 623L can antiair.</p>
 		<p>On offense, lean on stagger pressure and emphasize throws. You want to avoid eating a counterhit BC. Also, her reversal (U headbutt) loses to throws. Be aware of her mashing 2U and 2M. 2M has more range than you expect and confirms into U lariat. 2U is punishable on block, but it's fast and her strong strike/throw game gives it more reward on hit than most characters so you'll see it a lot.</p>
@@ -407,7 +407,6 @@
 		<p>- The heavy followup hops on his spear like a surfboard. It's very punishable on block. He only really uses it for combos, though if he misinputs it be ready to punish him.</p>
 		<p>- The U followup is a dash. He might use this to try to skip neutral sometimes, but it's reactable, so you can kill him for it if you're ready.</p>
 		<p>- The light followup fires a spear. Out of EX spear spin, this is plus, and it's also a true blockstring. Basically, he gets free plusframes with no counterplay.</p>
-		<p>Her light forward charge move leaves her -3 but spaced awkwardly. f.M will beat any of her meaningful followups here and also catch backwalk, but can lose to stance parry or the fast stance attack. Her reward off both of these is mediocre, so default to challenging with f.M. The medium and heavy variants of this special are both punishable on block. The U version is not, though she is minus. Don't spotdodge it!</p>
 		<p>Third, other... spear spin? The one where anre himself rotates with the spear.</p>
 		<p>- On the ground, light, medium, and heavy are all minus. In fact, heavy is punishable on block.</p>
 		<p>- In the air, light is minus. Medium is very slow but if you let him do it he's plus. Heavy is fast and plus. You'll see the heavy air spin often as a throwbait; you can beat it with fuzzy mash 5M, though 5M is 7f so it's weaker to traditional stagger pressure.</p>
@@ -505,7 +504,6 @@
 		<p>Airdash on block: Punished by 9f DP.</p>
 		<p>Throwtech RPS: Her sweep is an omnipotent throwtech button. If you initiate the throw pointblank, you can't even walk back - proximity guard kicks in and you get hit low. If you initiate it spaced you can whiffpunish with delay 2M.</p>
 		<p>Supers: Her pre-install SBA activates her install. It leads to a combo on hit, but is very punishable on block. Get used to safejabbing her on wakeup to play around it. You can spotdodge it if she catches you in a dash, but you'll miss the punish so block it if possible. It hits all around her, so she can and will attempt to use it as an antiair occasionally to blow up dash patterns. If you bait it like this, you can usually punish with U kick.</p>
-		<p>Supers: Her pre-install SBA activates her install. It leads to a combo on hit, but is very punishable on block. Get used to safejabbing her on wakeup to play around it. You can spotdodge it if she catches you in a dash, but you'll miss the punish so block it if possible. It hits all around her, so she can and will attempt to use it as an antiair occasionally to blow up dash patterns. If you bait it like this, you can usually punish with U kick.</p>
 		<p>Her post-install SBA is a giant laser. It's a very good reaction super that can snipe us even as far as fullscreen. When she has 100 meter in install, always keep it in mind as a potential option. To punish, spotdodge three times as early as possible, then you can full punish from anywhere with 214U.
 		<p>Her pre-install SSBA and post-install SSBA are very similar. They're respectable reaction supers that beat any form of fireball. They also both punish spotdodge, so if she catches you during a dash you need to roll behind her.
 		<br>
@@ -539,6 +537,7 @@
 		<p>His 2M is large, plus, and hits low. You will see it a lot. Not really any specific counterplay to note here - if he so chooses he can reset pressure forever, so get a good read on your opponent's offensive habits and pick a good place to mash/BC.</p>
 		<p>EX fireball is more interactive than it looks. He has three main options.</p>
 		<p>1) No followup. Plus when spaced but you can spotdodge. -2 pointblank but it's a true blockstring so he gets the chance to perform a followup for free.</p>
+		<p>2) In-place followup. This is very very plus, even pointblank. If he is pointblank you can hit him out of it with 2M. If he is a little farther, you can trade with sweep (this trade is massively in our favor).</p>
 		<p>3) The other followups drag the projectile upward. They are both minus.</p>
 		<p>He can also reset pressure with the forward followup of his medium projectile. You can roll this on prediction (you're probably minus on reaction), mash, or U tornado to beat it.</p>
 		<p>His U fireball is very very plus and gives a full combo on hit, but it's easily spotdodged if you aren't already committed to something. He especially likes it on defense because it's quite fast and doesn't extend a hurtbox, so watch for it when he's halfscreen or so in the corner.</p>
@@ -791,7 +790,7 @@
 		</div>
 		<p>You can see her next item below her meter. The main ones to watch out for are star, cannonball, and spike ball which all give her more plus frames on block than usual.</p>
 		<p>The high metal projectile beats airdash but can be ducked. The low one loses to airdash and cannot be rolled.</p>
-		<p>The main problem in the matchup is mouseball. It is very active, can snipe us out of airdash, and can loop plus frames in the corner. Instant roll will beat it at pretty much all spacings, but if you try to react you will lose. command jump off her weird diagonal antiair laser. This is a safejump. Don't DP. You can fuzzy mash her landing, though. It can also crossup if she's close so be ready to hold block button.</p>
+		<p>The main problem in the matchup is mouseball. It is very active, can snipe us out of airdash, and can loop plus frames in the corner. Instant roll will beat it at pretty much all spacings, but if you try to react you will lose.</p>
 		<p>66L: Goes under airdash.</p>
 		<p>Airdash on block: j.L wins against everything except U DP.</p>
 		<p>Throwtech RPS: f.M is an omnipotent throwtech button. Can only walk back and whiff punish if you initiate the throw spaced - otherwise, you have to hold it.</p>
