--- a/midscreen.html
+++ b/midscreen.html
@@ -22,7 +22,7 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/simple-midscreen.mp4"/>
 		</video>
 		<p>Your easiest (actual) midscreen combo. If you're dropping the 2M after 623M it's probably because you're doing either the 214U or the 2H too late. You want all inputs as early as possible.</p>
-		<p>If you reach the corner for wallbounce you gain a lot of flexibility with the ender. The one shown in the video is 5L > 22H, which leaves you +1 in their face. Note that any button you press here will lose to wakeup throw. Set up single seal instead if you want to safely take pressure with a button.</p>
+		<p>If you reach the corner for wallbounce you gain a lot of flexibility with the ender. A decent meterless ender is 5L > 22H, which leaves you +1 in their face. Note that any button you press here will lose to wakeup throw. Set up single seal instead if you want to safely take pressure with a button.</p>
 		<p>If you're close enough to the corner after the 2M you can press 623H > j.22H instead to safely set up seals.</p>
 		<p>If you're a little spaced out of the corner, you get a higher wallbounce that leaves you enough time to end in 22U for a safejump setup.</p>
 		
