--- a/gimmicks.html
+++ b/gimmicks.html
@@ -23,7 +23,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fl-crossup.mp4"/>
 		</video>
-		<p>Reactable block button check. The closer you are to the corner, the more likely it is to work. If you're close enough (like I was in the corner) you actually need to delay the 2L slightly or it goes backward and whiffs.</p>
+		<p>Reactable block button check. The closer you are to the corner, the more likely it is to work. If you're close enough (like I was in the video) you actually need to delay the 2L slightly or it goes backward and whiffs.</p>
 		<p>If you screw up the timing the enemy will bounce away from you at the end instead of toward you. I recommend doing the 22U as early as possible after the 214U.</p>
 		
 		<h2>Midscreen 92U6U Drop Feint (+3)</h2>
@@ -69,6 +69,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-bounceout-22u-2.mp4"/>
 		</video>
-		<p>You're more likely to see this corner bounce-out happen accidentally after 214H wallbounce. If you realize in time, you can do this to salvage the uncommon drop and keep corner. You also don't need to walk forward for a bad 214H bounce, so it's a little easier to convert in a match. Second video is a way to double-salvage the drop if your 2L doesn't whiff: 5U > crossup j.M. Note that while the first video is a safejump, the second is not!</p>
+		<p>You're more likely to see this corner bounce-out happen accidentally after 214H wallbounce. If you realize in time, you can do this to salvage the uncommon drop and keep corner. You also don't need to walk forward for a bad 214H bounce, so it's a little easier to convert in a match. Second video is a way to double-salvage the drop if your 2L doesn't whiff: (5U > crossup j.M). Note that while the first video is a safejump, the second is not!</p>
 	</body>
 </html>
