Correct some minor errors

--- a/empty-lows.html
+++ b/empty-lows.html
@@ -50,7 +50,7 @@
 		<p>Again, will lose to a perfectly timed fuzzy mash throw. Delay the 6U at the end to make it a safejump instead.</p>
 		
 		<h2>Metered j.214H Empty Low (+3)</h2>
-		<code>autocombo > 623H > j.H > rejump j.H > 5H > 236H~8 > 22U > 2H (> 8U whiff > 2L)</code><br class="combo"/>
+		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 22U > 2H (> 8U whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-new-2.mp4"/>
 		</video>
