--- a/matchup-notes.html
+++ b/matchup-notes.html
@@ -128,8 +128,8 @@
 			<img src="https://grimnir-combos.github.io/charicons/lancelot.jpg"/>
 		</div>
 		<p>Try not to exist at the spacing where he can press his charge move and be plus. Either back up farther to play at fullscreen, or approach to play at midscreen. Be ready to antiair. On offense, 623M is good for stopping him from walljumping out of the corner. Remember that the second hit of his DP is an overhead for some reason. Remember to hold the block button.</p>
-		<p>Dealing with rekka: He doesn't really get much reward off it on hit so the risk/reward on mashing when you see it is often very favorable. Lance players like to do the first hit of EX rekka into throw, and if you're mashing you'll beat them for a full combo.</p>
-		<p>You can react to his EX fireball in neutral with U fireball, and on defense with f.H for a full punish. His U fireball inflicts a unique slowing debuff for a bit that makes anything you whiff turn into instant death. Don't BC, and if you have the health, take the throw.</p>
+		<p>Dealing with rekka: He doesn't really get much reward off it on hit so the risk/reward on mashing when you see it is often very favorable. Lance players like to do the first hit of EX rekka into throw, and if you're mashing you'll beat them for a full combo. The first hit of his light/medium rekka can be plus when spaced.</p>
+		<p>You can react to his EX fireball in neutral with U fireball, and on defense with f.H for a full punish. It is slower and an easier reaction than it looks. His U fireball inflicts a unique slowing debuff for a bit that makes anything you whiff turn into instant death. Don't BC, and if you have the health, take the throw.</p>
 		<p>He has a setup where he does EX fireball into invincible teleport dive. You'll see it most often after SBA. The idea is if you jump the EX fireball, he hits you with the dive into full combo. Unfortunately for him, the invincible teleport isn't invincible on startup and loses to air ball, so you can just jump and press air ball to deal with the setup. (Be aware that he can still antiair you normally! Don't rely on this too much.)</p>
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Regular.</p>
@@ -362,7 +362,7 @@
 		<p>66L: Goes under airdash.</p>
 		<p>Airdash on block: Regular.</p>
 		<p>Throwtech RPS: Her 2M and 2U are both omnipotent throwtech buttons. Can only walk back and whiff punish if you initiate the throw spaced. If you want to be very unhinged, 2U is -3 on spotdodge.</p>
-		<p>Supers: Both SBA and SSBA are respectable reaction supers that beat all forms of tornado. SSBA can be spotdodged, SBA cannot. SBA is particular rough in the clash situation (which she can force somewhat often with M spear).</p>
+		<p>Supers: Both SBA and SSBA are respectable reaction supers that beat all forms of tornado. SSBA can be spotdodged, SBA cannot. SBA is particularly strong in the clash situation (which she can force somewhat often with M spear).</p>
 		<br>
 		
 		<div class="name-and-image">
@@ -473,7 +473,7 @@
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Has a parry.</p>
 		<p>Throwtech RPS: His 2M and 2U will both beat our 2M/f.H if pressed instantly, but neither button reaches, so they both lose to delay 2M.</p>
-		<p>Supers: His SBA is an okay reaction super. It will beat all tornado followups if cancelled into from about f.M range, but the the horizontal is bad so it whiffs if we cancel from f.H instead. His SSBA is an excellent reaction super. Both can be spotdodged.</p>
+		<p>Supers: His SBA is an okay reaction super. It will beat all tornado followups if cancelled into from about f.M range, but the horizontal is bad so it whiffs if we cancel from f.H instead. His SSBA is an excellent reaction super. Both can be spotdodged.</p>
 		<p>He also has an install. I'm not sure I've ever seen it used in a match. Basically, while it's active he is plus on pretty much everything he does until the timer runs out. Dustloop recommends pressing brave counter, which sounds about right to me.
 		<br>
 		<br>
@@ -580,7 +580,7 @@
 		<p>Don't try to check her running up, 66H always wins. Don't spotdodge her U skills because U sheep charge will kill you.</p>
 		<p>You cannot roll anything she does. The non-ultimate sheep projectiles are spotdodgeable on defense, but you don't get much reward. Framedata ranges from about -2 to +2.</p>
 		<p>Her light sheep ride comes out quickly and isn't worth spotdodging. Her medium sheep ride has a fat delay and leaves her +2, but if you spotdodge it correctly you get a full punish. The delay for the spotdodge is somewhat unintuitive and worth practicing. The EX sheep ride is fully punishable on block with f.H.</p>
-		<p>She has a followup from sheep ride where she hops off it and throws it as a projectile. If you spotdodge these correctly, she also dies. The timing for dodging is the same whether she hops off or not so you don't need to specifically worry about it.</p>
+		<p>She has a followup from sheep ride where she hops off it and throws it as a projectile. If you spotdodge these correctly, she also dies. If she is more than half screen away or so the timing for dodging is the same whether she hops off or not so you don't need to specifically worry about it. If she is close to you in the corner, she can actually punish your spotdodge on reaction. In this case, your only recourse to avoid giving her plus frames is to mash 2M before the charge reaches you. Otherwise, she's plus and you gotta hold it.</p>
 		<p>She has a commandjump that can often hop behind you, both in neutral and to escape the corner. It is 2Hable, but can be a pretty difficult reaction. If you have the meter and don't want to worry, you can DP instead. Super can also win, but if she crosses you up it can also go the wrong way.</p>
 		<p>The ultimate commandjump goes very far and is plus on block. You can punish on dodge.</p>
 		<p>U sheep projectile fires three sheep. If you don't have seals up it's honestly pretty hard to do anything about it. Anila's recovery on this move is very high, so if you DO have seals up, you can tk airdash and punish. It's very difficult to spotdodge from anywhere other than nearly fullscreen, so you'll see Anilas pull it out especially when they're playing for chip. At close range, you need to spotdodge twice almost instantly. It is a difficult reaction.</p>
@@ -622,7 +622,7 @@
 		<p>- Fuzzy mash 5L on his safejumps. Don't let Grimnir players get away with fake empty jumps.</p>
 		<p>- If you see him do any type of forward or up-forward seal dash while you're in the corner, you can walk forward to cornerswap. Note that if he dashes straight up, he can punish you for this, so only walk forward if you see him do a forward dash.</p>
 		<p>- You can sweep the tornado-in-front setup to knock him out of most of his options, though he can hard call it out if you're predictable. You can also press small delay 5L to put him in hit/blockstun long enough to escape the threat of the throw combo. This is much harder for him to call out.</p>
-		<p>- The camera 50/50 is reactable. Practice reacting to it in training mode. Block low, react high. You have about 20f to react once you see the top of Grimnir's head.</p>
+		<p>- The camera 50/50 is reactable. Practice reacting to it in training mode. Block high, react low. You have about 20f to react once you see the top of Grimnir's head.</p>
 		<p>- When in doubt, take the throw. Not like he can fuzzy you. :(</p>
 		<p>66L: Loses to airdash.</p>
 		<p>Airdash on block: Regular.</p>
