--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -31,7 +31,7 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-in-front-meterless.mp4"/>
 		</video>
 		<p>Meterless setup similar in concept to the no refund route listed directly above. All the same points apply. You're -8 on this setup, but again, the frame data doesn't really matter very much. Either the opponent has a button they can press to hit you through the tornado, or they don't.</p>
-		<p>The dash pattern is slightly awkward. Do the j.9U as early as possible, then slightly delay the j.2U. If you don't delay it enough, the enemy will fall to low to hit with j.L. If you delay it too much your j.2U won't come out.</p>
+		<p>The dash pattern is slightly awkward. Do the j.9U as early as possible, then slightly delay the j.2U. If you don't delay it enough, the enemy will fall too low to hit with j.L. If you delay it too much your j.2U won't come out.</p>
 		
 		<h2>Tornado Behind</h2>
 		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > 22U (> 236H~4 whiff, set up behind the opponent)</code><br class="combo"/>
